@@ -12,6 +12,7 @@ Low priority bugs
 
 Features
 1.3.0
+- Add a warning related to https://www.doomworld.com/forum/topic/113682-minor-dehacked-string-bug-with-doom2exe/
 - VGA: "Also, it would be cool if the states had one extra column with the name of the thing that is using them."
   - Check to see if any things use states that use the wrong type of action (weapon or monster).
 - Mark and display items (things, states, strings, ammo, weapons, sounds) as modified compared to engine config.
