@@ -6,6 +6,7 @@ Changed: rewrote parts of the state editor so that the state list is more perfor
 Fixed: the state animation preview now displays action names instead of code pointers for non-extended patches.
 Fixed: a weapon's FireCGun and FirePlasma actions would previously only count the extra muzzle flash state as used if the action was used on the first fire state.
 Fixed: loading non-extended patches that try to set a codepointer on a state that originally had none will now display a warning. Thanks to Zodomaniac.
+Fixed: saving a yet unsaved patch while exiting caused a crash. Thanks to TheStupidestBeing.
 
 Version 1.2.4
 -------------
